css/temp3-header/temp3-header.css
/* ... */
/* =================================== */
#temp3-dropdown {
    position: relative;

}

/* ------------------------------ */


#temp3-dropdown-menu {
    background-color: var(--transparentDropDown);
    color: var(--white);
    min-width: 250px;
    max-width: 250px;
    border-radius: 10px;

    position: absolute;
    left: 0%;
    right: 0%;
    top: 70%;

    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: start;
    gap: 10px;

    list-style: none;
    text-align: start;
    padding: 10px;

    max-height: 0px;
    opacity: 0;

    transition: all 0.6s ease-in-out
}

#temp3-dropdown-menu::before {
    content: "";
    position: absolute;
    top: -20px;
    left: 80%;
    border-width: 10px;
    border-style: solid;
    border-color: transparent transparent var(--transparentDropDown) transparent;
}

#temp3-dropdown-menu.active-temp3-dropdown-menu {
    max-height: 400px;
    opacity: 1;
    pointer-events: auto;
}

#temp3-dropdown-menu li {
    width: fit-content;
    cursor: pointer;
}

#temp3-dropdown-menu li a {
    display: inline-block;
    width: fit-content;
    color: var(--white);
}

#temp3-dropdown-menu li a::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    height: 2px;
    width: 0;
    background-color: var(--white);
    border-radius: 20px;
    transition: width 0.4s ease;
}

#temp3-dropdown-menu li a:hover::after {
    width: 100%;
}

/* ------------------------------ */

#temp3-toggle-menu {
    background-color: transparent;
    border: none;
    font-size: 1.2rem;
    font-weight: 550;
    color: var(--primaryColor);
    cursor: pointer;
}

#temp3-toggle-menu.rotate {
    animation: spin360 0.4s ease;
}

@keyframes spin360 {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(180deg);
    }
}

/* ================== 6 =================== */
#temp3-pages-btn {
    display: none;
    color: var(--white);
    background-color: var(--secondaryColor);

    border-radius: 25px;
    border: none;

    /* width: 10%; */
    padding: 10px;
    font-size: large;
    font-weight: 600;
    cursor: pointer;
}

/* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ */

@media (max-width:768px) {
    .contact-section-in-header {
        display: none;
    }

    #temp3-pages-btn {
        display: block;
    }
}

@media (max-width:335px) {

    .temp3-logo-container {
        height: 58px;
        width: fit-content;
    }

    /* ------------------------------ */

    .temp3-logo-container a {
        justify-content: space-between;
        gap: 3px;
    }

    /* ------------------------------ */

    .temp3-logo-container a img {
        aspect-ratio: 1 / 1;
    }

    /* ------------------------------ */

    .temp3-logo-container a span {
        width: 70%;
        font-size: clamp(0.9rem, 4vw, 1.2rem);
        word-break: break-word;
    }

    /* ======================================= */
    #temp3-over-lay {

        position: fixed;
        top: 0%;
        right: 0px;
        z-index: 10000;

        height: 100vh;
        width: 100%;

        background-color: transparent;
        box-sizing: border-box;


        transform: translateX(100%);
        opacity: 0;
        pointer-events: none;
        transition: transform 1S ease-in-out, opacity 1S ease-in-out;
        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
        z-index: 99;
    }

    /* -------------------------------- */
    .temp3-pages {
        display: flex;
        flex-direction: column;
        justify-content: start;
        align-items: start;
        padding-inline-start: 10px;
        position: relative;
        width: 75%;
        max-width: 280px;
        height: 100vh;
        padding: 15px 10px;


        color: var(--white);
        direction: rtl;

        position: absolute;
        top: 0%;
        right: 0px;
        background-color: var(--primaryColor);

        overflow-y: auto;
        -ms-overflow-style: none;  /* IE and Edge */
        scrollbar-width: none;  /* Firefox */
        box-sizing: border-box;
    }

    .temp3-pages::-webkit-scrollbar {
        display: none; /* Chrome, Safari and Opera */
    }

    .temp3-pages a {
        width: fit-content;
        margin: 0px;
        color: var(--white);
        font-size: clamp(0.85rem, 3vw, 1rem);
        word-break: break-word;
    }

    /* ================================= */
    #temp3-dropdown {
        width: 100%;
        position: relative;
    }

    /* --------------------------------- */

    #temp3-dropdown-menu {
        position: static;
        left: 0%;
        right: 0%;
        top: 0%;
        /* box-shadow: 0px 3px 8px var(--shadow); */
        margin: 0%;
        padding: 0% 10px;
        pointer-events: none;
        background-color: var(--white);
        border-radius: 0%;
        gap: 0px;
        min-width: 100%;
        max-width: 100%;
    }

    #temp3-dropdown-menu::before {
        display: none;
    }

    #temp3-dropdown-menu li {
        width: 100%;
        border-bottom: 1px dashed var(--primaryColor);
    }

    #temp3-dropdown-menu li:last-child {
        margin-bottom: 20px;
    }

    #temp3-dropdown-menu li a {
        font-size: 0.9rem;
        font-weight: 450;
        color: var(--primaryColor);
    }


    #temp3-dropdown-menu li a::after {
        content: "";
        height: 0px;
        width: 0px;
    }

    #temp3-dropdown-menu li a:hover::after {
        content: "";
        height: 0px;
        width: 0px;
    }

    /* -------------------------------------- */
    #temp3-toggle-menu {
        color: var(--white);
    }

    /* -------------------------------- */

    #temp3-pages-btn {
        display: block;
    }
}
/* ... */

